# sauce-fastapi

./: pyproject.toml
app/: main.py
app/api/v1/endpoints/: items.py
app/core/: config.py  db.py
app/crud/: crud_item.py
app/models/: item.py
app/schemas/: item.py
